# destinypedia-get

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-35c41cc237c0e2c96e18329d5a98f7d2efef8fdf0e2f29ce594006d25dde57ba.json  query-7b9f4ac384b0c18b45d82227111c3bf8a6a250d5b39ae97f824d2563d03f9f1c.json  query-826d33c7152ae9b3a9d573de1592d252d977d061bd42bf6d9dfac0f2eb85b566.json  query-8bbd61efd42ccb42f5331200c02669efc0ee2878798b2007fb8f683da044cc88.json  query-90c8fe60f272065070f2950373f5923bb4f21e532039aca3adfccd22ca4dcd5b.json  query-b77471bbb830cca7229c8255538e77000cee8c5e06a437773377a1053f90cba3.json  query-ffc51f843c352f596f172cd989c358fcf9936031baed4616806faadce07c7755.json
data/: grimoire_categories.txt  image_categories.txt
data/example_responses/fail/: prop_imageinfo.json  prop_images.json  prop_info.json  prop_pageimages.json
data/example_responses/ok/: generator_allcategories_prop_categories|categoryinfo.json  list_allimages_aiprefix.json  list_categorymembers.json  list_prefixsearch.json  prop_categoryinfo.json  prop_catrgories.json  prop_imageinfo.json  prop_imageinfo2.json  prop_images.json  prop_info.json  prop_pageimages.json  prop_pageimages_original|name.json
src/: cli.rs  error.rs  get.rs  lib.rs  main.rs  prebuilt.rs
src/database/: connection.rs  sync.rs
src/models/: error.rs  mod.rs  params.rs  parse.rs  prop_de.rs  query.rs  response.rs  traits.rs
src/models/deserialize/: de_helpers.rs  items.rs  mod.rs  prop_results.rs  query.rs  response.rs
src/models/serialize/: mod.rs  params.rs  query.rs  ser_types.rs  traits.rs
tests/: deserialize_tests.rs
