[package]
name = "destiny-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["unstable-doc", "cargo", "derive"] }
reqwest = { version = "0.13.2", features = ["json", "query", "blocking" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3.27.0"
